<resources>
    <string name="app_name">Final</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string-array name="months">
        <item>Jan</item>
        <item>Feb</item>
        <item>Mar</item>
        <item>Apr</item>
        <item>May</item>
        <item>Jun</item>
        <item>Jul</item>
        <item>Aug</item>
        <item>Sep</item>
        <item>Oct</item>
        <item>Nov</item>
        <item>Dec</item>
    </string-array>

    <string name="faq1">Q: What is WashWise?
    </string>

    <string name="faq1_answer">A: WashWise is an application that allows users to order laundry services from their mobile device and have the laundry picked up, washed, folded, and delivered back to their doorstep.
</string>

    <string name="faq2">Q: How does the laundry delivery app work? </string>

    <string name="faq2_answer">A: Users can download the app, create an account, schedule a pickup time, and select the laundry services they need. The laundry is then picked up by a delivery person, washed and folded by a professional laundry service, and delivered back to the user\'s doorstep.</string>

    <string name="faq3">Q: What laundry services are available on the app?
    </string>

    <string name="faq3_answer">A: The laundry services available on the app may vary depending on the provider, but they typically include washing, drying, folding, ironing, and dry cleaning.
</string>

    <string name="faq4">Q: How long does it take to get my laundry back?
    </string>

    <string name="faq4_answer">A: The turnaround time for laundry delivery may vary depending on the provider and the services selected. Typically, the laundry will be picked up and delivered back within 24-48 hours.
</string>

    <string name="faq5">Q: What if there\'s a problem with my laundry order?
    </string>

    <string name="faq5_answer">A: If there\'s an issue with your laundry order, you should contact customer support through the app. We will work with you to resolve the problem and ensure that you\'re satisfied with the service.
</string>

    <string name="faq6">Q: Do I need to be home for the laundry pickup and delivery?
    </string>

    <string name="faq6_answer">A: Yes, we currently don\'t offer no-contact services, so you will have to be home during delivery and collection.
</string>

    <string name="faq7">Q: How do I pay for the laundry services?
    </string>

    <string name="faq7_answer">A: We accept payment through the app, using a credit or debit card. Payment is typically processed after the laundry has been delivered.
</string>

</resources>